Updating swagger documentation
