# swagger/APIAddressCoordinates.json
@@ -9,6 +9,9 @@
     "/api/addresses": {
       "get": {
         "summary": "Returns a list of addresses",
+        "tags": [
+          "Address"
+        ],
         "responses": {
           "200": {
             "description": "A JSON array of addresses information and coordinates",
@@ -29,7 +32,7 @@
                       "district": "Urca",
                       "city": "Rio de Janeiro",
                       "state": "RJ",
-                      "country": "Brasil",
+                      "country": "Brazil",
                       "location": {
                         "type": "Point",
                         "coordinates": [
@@ -46,7 +49,7 @@
                       "district": "Alto da Boa Vista",
                       "city": "Rio de Janeiro",
                       "state": "RJ",
-                      "country": "Brasil",
+                      "country": "Brazil",
                       "location": {
                         "type": "Point",
                         "coordinates": [
@@ -64,6 +67,19 @@
       },
       "post": {
         "summary": "Register an address",
+        "tags": [
+          "Address"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Address"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "A string informing about success",
@@ -77,6 +93,180 @@
             }
           }
         }
+      }
+    },
+    "/api/address/<id>": {
+      "get": {
+        "summary": "Return an object address",
+        "tags": [
+          "Address"
+        ],
+        "responses": {
+          "200": {
+            "description": "An object informing the address and his coordinates",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "_id": {
+                      "$oid": "6563ab4b514febb49306a795"
+                    },
+                    "street": "Parque Nacional da Tijuca",
+                    "district": "Alto da Boa Vista",
+                    "city": "Rio de Janeiro",
+                    "state": "RJ",
+                    "country": "Brazil",
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -22.9516393,
+                        -43.2104765
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Error message if the object not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "An error has occurred: Address not found"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Update an address and return an object address with the new values",
+        "tags": [
+          "Address"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Address"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "An object informing the new address and his coordinates information",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "_id": {
+                      "$oid": "6563ab4b514febb49306a795"
+                    },
+                    "street": "Parque Nacional da Tijuca",
+                    "district": "Alto da Boa Vista",
+                    "city": "Rio de Janeiro",
+                    "state": "RJ",
+                    "country": "Brazil",
+                    "location": {
+                      "type": "Point",
+                      "coordinates": [
+                        -22.9516393,
+                        -43.2104765
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error message if the object not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Invalid parameter value: "
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete an address and return a message informing whether the deletion process was successful",
+        "tags": [
+          "Address"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful message",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Registration deleted successfully"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Successful message",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "An error has occurred: Error deleting or non-existing record"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "Address": {
+        "type": "object",
+        "properties": {
+          "number": {
+            "type": "string",
+            "example": 520
+          },
+          "street": {
+            "type": "string",
+            "example": "AV. Pasteur"
+          },
+          "district": {
+            "type": "string",
+            "example": "Urca"
+          },
+          "city": {
+            "type": "string",
+            "example": "Rio de janeiro"
+          },
+          "state": {
+            "type": "string",
+            "example": "RJ"
+          },
+          "country": {
+            "type": "string",
+            "example": "Brazil"
+          }
+        },
+        "required": [
+          "street",
+          "district",
+          "city",
+          "state",
+          "country"
+        ]
       }
     }
   }
