# swagger/python-flask-server-swagger/swagger_server/models/address.py
@@ -1,0 +1,202 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Address(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, number: str=None, street: str=None, district: str=None, city: str=None, state: str=None, country: str=None):  # noqa: E501
+        """Address - a model defined in Swagger
+
+        :param number: The number of this Address.  # noqa: E501
+        :type number: str
+        :param street: The street of this Address.  # noqa: E501
+        :type street: str
+        :param district: The district of this Address.  # noqa: E501
+        :type district: str
+        :param city: The city of this Address.  # noqa: E501
+        :type city: str
+        :param state: The state of this Address.  # noqa: E501
+        :type state: str
+        :param country: The country of this Address.  # noqa: E501
+        :type country: str
+        """
+        self.swagger_types = {
+            'number': str,
+            'street': str,
+            'district': str,
+            'city': str,
+            'state': str,
+            'country': str
+        }
+
+        self.attribute_map = {
+            'number': 'number',
+            'street': 'street',
+            'district': 'district',
+            'city': 'city',
+            'state': 'state',
+            'country': 'country'
+        }
+        self._number = number
+        self._street = street
+        self._district = district
+        self._city = city
+        self._state = state
+        self._country = country
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Address':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Address of this Address.  # noqa: E501
+        :rtype: Address
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def number(self) -> str:
+        """Gets the number of this Address.
+
+
+        :return: The number of this Address.
+        :rtype: str
+        """
+        return self._number
+
+    @number.setter
+    def number(self, number: str):
+        """Sets the number of this Address.
+
+
+        :param number: The number of this Address.
+        :type number: str
+        """
+
+        self._number = number
+
+    @property
+    def street(self) -> str:
+        """Gets the street of this Address.
+
+
+        :return: The street of this Address.
+        :rtype: str
+        """
+        return self._street
+
+    @street.setter
+    def street(self, street: str):
+        """Sets the street of this Address.
+
+
+        :param street: The street of this Address.
+        :type street: str
+        """
+        if street is None:
+            raise ValueError("Invalid value for `street`, must not be `None`")  # noqa: E501
+
+        self._street = street
+
+    @property
+    def district(self) -> str:
+        """Gets the district of this Address.
+
+
+        :return: The district of this Address.
+        :rtype: str
+        """
+        return self._district
+
+    @district.setter
+    def district(self, district: str):
+        """Sets the district of this Address.
+
+
+        :param district: The district of this Address.
+        :type district: str
+        """
+        if district is None:
+            raise ValueError("Invalid value for `district`, must not be `None`")  # noqa: E501
+
+        self._district = district
+
+    @property
+    def city(self) -> str:
+        """Gets the city of this Address.
+
+
+        :return: The city of this Address.
+        :rtype: str
+        """
+        return self._city
+
+    @city.setter
+    def city(self, city: str):
+        """Sets the city of this Address.
+
+
+        :param city: The city of this Address.
+        :type city: str
+        """
+        if city is None:
+            raise ValueError("Invalid value for `city`, must not be `None`")  # noqa: E501
+
+        self._city = city
+
+    @property
+    def state(self) -> str:
+        """Gets the state of this Address.
+
+
+        :return: The state of this Address.
+        :rtype: str
+        """
+        return self._state
+
+    @state.setter
+    def state(self, state: str):
+        """Sets the state of this Address.
+
+
+        :param state: The state of this Address.
+        :type state: str
+        """
+        if state is None:
+            raise ValueError("Invalid value for `state`, must not be `None`")  # noqa: E501
+
+        self._state = state
+
+    @property
+    def country(self) -> str:
+        """Gets the country of this Address.
+
+
+        :return: The country of this Address.
+        :rtype: str
+        """
+        return self._country
+
+    @country.setter
+    def country(self, country: str):
+        """Sets the country of this Address.
+
+
+        :param country: The country of this Address.
+        :type country: str
+        """
+        if country is None:
+            raise ValueError("Invalid value for `country`, must not be `None`")  # noqa: E501
+
+        self._country = country
